--- a/user-service.yml
+++ b/user-service.yml
@@ -2,4 +2,4 @@ token:
   expiration_time: 86400000
   secret: user_token_default
 order-service:
-  url: http:/127.0.0.1:8000/order-service/%s/orders
+  url: http://127.0.0.1:8000/order-service/%s/orders
